# breadpan

./: Makefile  README.md  README_kr.md  setup.cfg
backend/: Makefile
backend/apps/flask/: resources.py
backend/breadpan/: __init__.py  entity.py  interface.py  usecase.py
backend/tests/: test_todo.py
backend/todo/: __init__.py  entity.py  interface.py  usecase.py
be/breadpan/: entity.py  interface.py  usecase.py
be/tests/: test_todo.py
be/todo/: entity.py  interface.py  usecase.py
demo/: Makefile  README.md
demo/flask/: __init__.py  main.py
demo/tests/: context.py  test_todo.py
demo/todo/: __init__.py  entity.py  interface.py  usecase.py
docs/: how_to_implement.md
frontend/: README.md
frontend/todoapp/: Makefile  package.json
frontend/todoapp/components/: Layout.tsx  ToDoList.tsx
frontend/todoapp/interfaces/: index.ts
frontend/todoapp/pages/todo/: index.tsx
src/breadpan/: entity.py  interface.py  usecase.py
