[metadata]
name = breadpan
version = 0.0.1
author = Jinho Yoo
author_email = brotherjinho@gmail.com
description = The framework that applied DDD concepts in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jinhoyoo/breadpan
project_urls =
    Bug Tracker = https://github.com/jinhoyoo/breadpan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src